<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLayout"
    android:orientation="vertical"
    android:padding="@dimen/regist_padding">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/regist_padding"
        android:layout_weight="1"
        android:background="@drawable/edit_text_background"
        android:hint="@string/edit_hint_name"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorEditTextHint"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/regist_padding"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:background="@drawable/edit_text_background"
        android:hint="@string/text_hint_address"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorEditTextHint"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/edit_tel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/regist_padding"
        android:layout_weight="1"
        android:background="@drawable/edit_text_background"
        android:hint="@string/edit_hint_tel"
        android:inputType="phone"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorEditTextHint"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/text_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/regist_padding"
        android:gravity="end"
        android:text="@string/text_count"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/edit_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/regist_padding"
        android:layout_weight="3"
        android:maxLength="500"
        android:background="@drawable/edit_text_background"
        android:gravity="top"
        android:hint="@string/edit_hint_content"
        android:inputType="textMultiLine"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorEditTextHint"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/regist_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/regist_padding">

            <Button
                android:id="@+id/button_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/regist_padding"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/button_back"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/regist_padding"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/button_next"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>